[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/Enemies/Base/Enemy.gd" type="Script" id=1]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=2]
[ext_resource path="res://Scenes/Weapons/Base/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Idle_1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Overlap/Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Walk_4.png" type="Texture" id=9]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Idle_4.png" type="Texture" id=10]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Walk_3.png" type="Texture" id=11]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Idle_3.png" type="Texture" id=12]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Walk_1.png" type="Texture" id=13]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Walk_2.png" type="Texture" id=14]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Large Knight - Standard/LargeKnight_Idle_2.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Enemies/Attributes/GuardianKnight.tres" type="Resource" id=16]
[ext_resource path="res://Menu/medieval-pixel.ttf" type="DynamicFontData" id=17]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.0
height = 0.0

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=6]

[sub_resource type="Animation" id=7]
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Stop"

[sub_resource type="CapsuleShape2D" id=10]
radius = 16.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 14.0
height = 4.0

[sub_resource type="DynamicFont" id=12]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[node name="GuardianKnight" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )
enemyAttributes = ExtResource( 16 )
speed = 35

[node name="Stats" parent="." instance=ExtResource( 8 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "Idle"
__meta__ = {
"_editor_description_": ""
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/RangeAttack = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="EnemyBlinkAnimation" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 8 )
anims/Stop = SubResource( 9 )

[node name="Weapon" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 10 )
disabled = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 32
collision_mask = 72

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 11 )

[node name="DialogBox" type="Control" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="Label" parent="DialogBox"]
visible = false
margin_left = -24.0
margin_top = -27.0
margin_right = 154.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 12 )
text = "Only those who
are invited by the
king, are able to
enter here!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="Stats" method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="Stats" method="_on_Hurtbox_body_entered"]
[connection signal="damaged" from="Hurtbox" to="Stats" method="_on_Hurtbox_damaged"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
